Sec4_Chap32-XXX: optimized code