@@ -7,22 +7,22 @@ import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.boot.test.autoconfigure.web.servlet.WebMvcTest;
-import org.springframework.boot.test.mock.mockito.MockBean;
 import org.springframework.http.MediaType;
+import org.springframework.test.context.bean.override.mockito.MockitoBean;
 import org.springframework.test.web.servlet.MockMvc;
 
 import java.math.BigDecimal;
-import java.util.Arrays;
+import java.util.List;
 import java.util.Optional;
 
 import static org.hamcrest.Matchers.hasSize;
 import static org.hamcrest.Matchers.is;
 import static org.mockito.ArgumentMatchers.any;
-import static org.mockito.ArgumentMatchers.anyInt;
 import static org.mockito.BDDMockito.given;
 import static org.mockito.Mockito.doNothing;
 import static org.mockito.Mockito.verify;
 import static org.springframework.test.web.servlet.request.MockMvcRequestBuilders.*;
+import static org.springframework.test.web.servlet.result.MockMvcResultHandlers.print;
 import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.*;
 
 @WebMvcTest(BeerController.class)
@@ -34,7 +34,7 @@ class BeerControllerTest {
     @Autowired
     ObjectMapper objectMapper;
 
-    @MockBean
+    @MockitoBean
     BeerService beerService;
 
     BeerDto testBeer;
@@ -54,7 +54,7 @@ class BeerControllerTest {
     @Test
     void testGetAllBeers() throws Exception {
         // Given
-        given(beerService.getAllBeers()).willReturn(Arrays.asList(testBeer));
+        given(beerService.getAllBeers()).willReturn(List.of(testBeer));
 
         // When/Then
         mockMvc.perform(get("/api/v1/beers")
@@ -119,7 +119,8 @@ class BeerControllerTest {
                 .content(objectMapper.writeValueAsString(beerToCreate)))
                 .andExpect(status().isCreated())
                 .andExpect(jsonPath("$.id", is(2)))
-                .andExpect(jsonPath("$.beerName", is("New Beer")));
+                .andExpect(jsonPath("$.beerName", is("New Beer")))
+                .andDo(print());
     }
 
     @Test
@@ -152,7 +153,8 @@ class BeerControllerTest {
                 .andExpect(status().isOk())
                 .andExpect(jsonPath("$.id", is(1)))
                 .andExpect(jsonPath("$.beerName", is("Updated Beer")))
-                .andExpect(jsonPath("$.beerStyle", is("Lager")));
+                .andExpect(jsonPath("$.beerStyle", is("Lager")))
+                .andDo(print());
     }
 
     @Test
@@ -172,7 +174,8 @@ class BeerControllerTest {
         mockMvc.perform(put("/api/v1/beers/1")
                 .contentType(MediaType.APPLICATION_JSON)
                 .content(objectMapper.writeValueAsString(beerToUpdate)))
-                .andExpect(status().isNotFound());
+                .andExpect(status().isNotFound())
+                .andDo(print());
     }
 
     @Test
@@ -183,7 +186,8 @@ class BeerControllerTest {
 
         // When/Then
         mockMvc.perform(delete("/api/v1/beers/1"))
-                .andExpect(status().isNoContent());
+                .andExpect(status().isNoContent())
+                .andDo(print());
 
         verify(beerService).deleteBeerById(1);
     }
